--- a/Index.html
+++ b/Index.html
@@ -3,6 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Bootstrap 3 Responsive Design Tutorial</title>
+	<!-- Latest compiled and minified CSS cdn content delivery network -->
+	<meta name="viewport" content="width=device-width, initial-scale=1"> <!-- se configura con una vista viewport dispositivo posicionado hacia arriba, lanscape es para dispositivo horizontal, el ancho del elemento es el ancho del device menos el ancho de la pantalla completa -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+<!-- jQuery library  manejar html mas simple-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript lo que usa el boot para manipular ciertas animaciones y elementos del html-->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
 	
