--- a/Index.html
+++ b/Index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Bootstrap 3 Responsive Design Tutorial</title>
+	<link href="css/style.css" rel="stylesheet">
 	<!-- Latest compiled and minified CSS cdn content delivery network -->
 	<meta name="viewport" content="width=device-width, initial-scale=1"> <!-- se configura con una vista viewport dispositivo posicionado hacia arriba, lanscape es para dispositivo horizontal, el ancho del elemento es el ancho del device menos el ancho de la pantalla completa -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
