--- a/Index.html
+++ b/Index.html
@@ -32,6 +32,13 @@
   </div>
 </header>
 
+<div class="banner">
+  <div class="container">
+    <h1>Twitter Bootstrap 3: Responsive Design Tutorial</h1>
+    <p>A comprehensive tutorial showing you how to quickly create responsive designs using Twitter Bootstrap 3.</p>
+  </div>
+</div>
+
 	
 </body>
 </html>
