--- a/Index.html
+++ b/Index.html
@@ -16,30 +16,30 @@
 </head>
 <body>
 
-<header class="top" role="header">
-  <div class="container">
-    <a href="#" class="navbar-brand pull-left"> BS3 TUTORIAL </a>
-    <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-      <span class="glyphicon glyphicon-align-justify"></span>
-    </button>
-    <nav class="navbar-collapse collapse" role="navigation">
-      <ul class="navbar-nav nav">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
-  </div>
-</header>
+    <header class="top" role="header">
+      <div class="container">
+        <a href="#" class="navbar-brand pull-left"> BS3 TUTORIAL </a>
+      <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="glyphicon glyphicon-align-justify"></span>
+      </button>
+        <nav class="navbar-collapse collapse" role="navigation">
+          <ul class="navbar-nav nav">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
-<div class="banner">
-  <div class="container">
-    <h1>Twitter Bootstrap 3: Responsive Design Tutorial</h1>
-    <p>A comprehensive tutorial showing you how to quickly create responsive designs using Twitter Bootstrap 3.</p>
-  </div>
-</div>
+    <div class="banner">
+      <div class="container">
+        <h1>Twitter Bootstrap 3: Responsive Design Tutorial</h1>
+        <p>A comprehensive tutorial showing you how to quickly create responsive designs using Twitter Bootstrap 3.</p>
+      </div>
+    </div>
 
-<div class="middle">
+    <div class="middle">
         <div class="container">
             <div class="col-md-9 content">
                 <h2>Use Twitter Bootstrap to create responsive designs for desktop, tablet & mobile</h2>
@@ -62,6 +62,24 @@
             </div>
         </div>
     </div>
+
+
+  <div class="bottom">
+   <div class="container">
+    <div class="col-md-4">
+      <h3><span class="glyphicon glyphicon-heart"></span> Footer section 1</h3>
+      <p>Content for the first footer section.</p>
+    </div>
+    <div class="col-md-4">
+      <h3><span class="glyphicon glyphicon-star"></span> Footer section 2</h3>
+      <p>Content for the second footer section.</p>
+    </div>
+    <div class="col-md-4">
+      <h3><span class="glyphicon glyphicon-music"></span> Footer section 3</h3>
+      <p>Content for the third footer section.</p>
+    </div>
+   </div>
+  </div>
 
 	
 </body>
